fixed linebreak for inputs on mobile

--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 
 p, input[type="time"] {
-  margin: 0 3vh;
+  margin: 0 3vw;
   font-family: 'Roboto';
 }
 
@@ -14,21 +14,21 @@ input[type="time"] {
   border-radius: 6px;
   text-align: center;
   vertical-align: top;
-  height: 3.2vh;
-  font-size: 2.4vh;
+  height: 3.2vw;
+  font-size: 2.4vw;
   border: none;
 }
 
 .header {
-  height: 3.2vh;
-  line-height: 3.2vh;
+  height: 3.2vw;
+  line-height: 3.2vw;
   margin-top: 6vh;
 }
 
 p {
   color: #DDD;
   display: inline-block;
-  font-size: 3.2vh;
+  font-size: 3.2vw;
 }
 
 h1 {
